<resources>
    <string name="app_name" translatable="false">DT.Print</string>


    <string name="welcome">Welcome</string>

    <!--    Drawer Nav Select Menu-->
    <string name="draw_nav_home">Home</string>
    <string name="draw_nav_gallery">Gallery</string>
    <string name="draw_nav_profile">Profile</string>
    <string name="draw_nav_orders">Orders</string>
    <string name="draw_nav_wishlist">Wishlist</string>
    <string name="draw_nav_shipping">Shipping</string>
    <string name="draw_nav_contact">Contact us</string>
    <string name="draw_nav_login">Login</string>
    <string name="draw_nav_signUp">Sign Up</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>


    <!--    /Drawer Nav Toggle Option-->
    <string name="navigation_drawer_open" translatable="false">Open Navigation Drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close Navigation Drawer</string>

    <!--    CardView Gallery-->
    <string name="cardView_btn_order">Order</string>
    <string name="cardView_btn_wishlist">Add to Wishlist</string>
    <string name="cardView_btn_more" translatable="false">More</string>


    <!--    CardView Item-->
    <string name="cardView_address">City + Address</string>
    <string name="full_name">LastName + First Name</string>
    //
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    //
    <string name="prodNameQtt">Product Name x Qtt</string>
    <string name="order_date">Order Date</string>
    <string name="order_price">Price</string>

    <!--    SignUp-->
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="phone_num">Phone Number</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="numTel">Phone</string>
    <string name="address">Address</string>


    <string name="password">Password</string>

    <!--    Search Bar-->
    <string name="search_hint">Search</string>

    <!--   ActionBar Titles-->
    <string name="your_orders">Your orders</string>
    <string name="your_wishlist">Your Wish list</string>

    <!--    Order Activity-->
    <string name="product_name_order">Product Name :</string>
    <string name="price_order">Price(DH) :</string>
    <string name="goodie_type">Type :</string>
    <string name="stock">Stock :</string>
    <string name="description">Description :</string>
    <string name="format">Format :</string>
    <string name="doubleface">Double sided  :</string>
    <string name="qtt">Quantity :</string>
    <string name="shipping_address">Shipping Address :</string>
    <string name="total">Total(DH):</string>
    <string name="total_per_page">Total(DH/PAGE):</string>
    <string name="open_file">Open File</string>
    <string name="open_image">Open Image</string>
    <string name="note">Note :</string>
    <string name="add_credit_card">Credit Card :</string>

    <!--    Contact -->
    <string name="email_address" translatable="false">dt.print@gmail.com</string>
    <string name="tel" translatable="false">+2126XXXXXXXX</string>
    <string name="local_address" translatable="false">xxX address Xxx</string>


<!--    HOME -->
    <string name="logo" translatable="false">Documents or Things</string>
    <string name="commerce" translatable="false">DT.PRINT makes your dreams real</string>

    <string name="orders_livreur">"Delivery man "</string>
    <string name="orders_agent">Agent</string>
    <string name="order_in_process">Order in process</string>
    <string name="Order_Delivered">Order Delivered</string>
    <string name="Deliveration_Error">Deliveration Error</string>
    <string name="already_logged_in" translatable="false">Already logged in</string>
    <string name="signup_add_client">Client Added</string>
    <string name="Added_to_your_Wishlist" translatable="false">Added to your Wish list</string>
    <string name="wishlist_error" translatable="false">wishlist error</string>
    <string name="You_must_SignIn" translatable="false">You must Sign In</string>


</resources>
