<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_View">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/draw_nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/draw_nav_home" />
        <item
            android:id="@+id/draw_nav_gallery"
            android:icon="@drawable/ic_gallery"
            android:title="@string/draw_nav_gallery" />
        <item
            android:id="@+id/draw_nav_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/draw_nav_profile" />
        <item
            android:id="@+id/draw_nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/draw_nav_contact" />
    </group>

    <item android:title="Orders"
        android:id="@+id/drawer_btns">
        <menu>
            <item
                android:id="@+id/draw_nav_orders"
                android:icon="@drawable/ic_orders"
                android:title="@string/draw_nav_orders" />
            <item
                android:id="@+id/draw_nav_wishlist"
                android:icon="@drawable/ic_wishlist"
                android:title="@string/draw_nav_wishlist" />
            <item
                android:id="@+id/draw_nav_logout"
                android:icon="@drawable/ic_logout_red"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
