<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="4dp"
        android:layout_marginBottom="25dp"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/SecondaryText"
        android:textSize="24sp" />

    <!--    Email-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_email"
            android:tint="@color/PrimaryText" />


        <TextView
            android:id="@+id/contact_email"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryLight"
            android:hint="@string/search_hint"
            android:paddingLeft="30dp"
            android:text="@string/email_address"
            android:textColor="@color/PrimaryText"
            android:textColorHint="@color/colorPrimaryLight"
            android:textSize="26sp" />

    </LinearLayout>

    <!--    Tel-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_tel"
            android:tint="@color/PrimaryText" />


        <TextView
            android:id="@+id/contact_tel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryLight"
            android:hint="@string/search_hint"
            android:paddingLeft="30dp"
            android:text="@string/tel"
            android:textColor="@color/PrimaryText"
            android:textColorHint="@color/colorPrimaryLight"
            android:textSize="26sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_address"
            android:tint="@color/PrimaryText" />

        <TextView
            android:id="@+id/contact_address"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimaryLight"
            android:hint="@string/search_hint"
            android:paddingLeft="30dp"
            android:text="@string/local_address"
            android:textColor="@color/PrimaryText"
            android:textColorHint="@color/colorPrimaryLight"
            android:textSize="26sp" />


    </LinearLayout>


</LinearLayout>

