<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    card_view:cardCornerRadius="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/icons_text"
        android:orientation="vertical"
        android:padding="5dp">

        <!--        First Row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/orders_prodNameQtt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="fill"
                android:text="@string/product_name"
                android:textAlignment="gravity"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/orders_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:adjustViewBounds="true"
                android:maxWidth="100dp"
                android:gravity="center"
                android:textAlignment="gravity"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp" />

        </LinearLayout>


        <!--        2rd row-->
        <TextView
            android:id="@+id/orders_orderNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:gravity="fill"
            android:text="Num"
            android:textAlignment="gravity"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--        3rd row-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/orders_price"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:layout_weight="1"
                android:gravity="fill"
                android:text="@string/price"
                android:textAlignment="gravity"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/orders_btn_more"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_more"
                android:tint="@color/colorAccentLight" />


        </LinearLayout>


    </LinearLayout>


</androidx.cardview.widget.CardView>
