<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginRight="5dp"
    card_view:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="5dp">
        <!--        Horizontal Start-->
        <ImageView
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--        First Row-->
            <TextView
                android:id="@+id/nom_produit_gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="fill"
                android:text="Nom"
                android:textAlignment="gravity"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold" />


            <!--        2rd row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                    <TextView
                        android:id="@+id/prix_produit_gallery"
                        android:layout_width="170dp"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:gravity="fill"
                        android:text="Prix"
                        android:textAlignment="gravity"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:textStyle="bold" />



                <Button
                    android:id="@+id/order_btn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@color/colorAccentLight"
                    android:text="@string/cardView_btn_order"
                    android:textColor="@android:color/white"
                    android:autoSizeMaxTextSize="20sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <!--        3rd row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/more_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:gravity="fill"
                    android:background="@android:color/transparent"
                    android:text="@string/cardView_btn_more"
                    android:textColor="@color/colorAccentLight"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/wishlit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/cardView_btn_wishlist"
                    android:textColor="@color/colorAccentLight"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>
        <!--        <ImageView-->
        <!--            android:id="@+id/imgShare"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="match_parent"-->
        <!--            android:layout_gravity="center"-->
        <!--            android:src="@drawable/ic_gallery"-->
        <!--            android:tint="@color/colorAccentLight" />-->


        <!--        END  -->
    </LinearLayout>

</androidx.cardview.widget.CardView>
